[gd_scene load_steps=15 format=3 uid="uid://bnxek14o451v5"]

[ext_resource type="PackedScene" uid="uid://bq7efemuyph7i" path="res://Nodes/Managers/GameManager.tscn" id="1_b4pir"]
[ext_resource type="PackedScene" uid="uid://4wn0uhpo15oy" path="res://Nodes/Objects/Bed.tscn" id="2_v75gu"]
[ext_resource type="PackedScene" uid="uid://dr2sq0325qauq" path="res://Nodes/Creatures/Cat.tscn" id="3_q3hs0"]
[ext_resource type="PackedScene" uid="uid://bkw14i1r5w4qm" path="res://Nodes/Managers/InputManager.tscn" id="4_t3fam"]
[ext_resource type="PackedScene" uid="uid://r3sk7dywmb6r" path="res://Nodes/Objects/Computer.tscn" id="7_p7h3x"]
[ext_resource type="Texture2D" uid="uid://8f0i07lejmot" path="res://Art/Computer/background.png" id="8_gydw4"]
[ext_resource type="Shader" path="res://Shaders/Blur.gdshader" id="9_n2fix"]
[ext_resource type="PackedScene" uid="uid://bi45d8lk753ee" path="res://Nodes/UI/ComputerButton.tscn" id="10_7c3fp"]
[ext_resource type="PackedScene" uid="uid://cx4ycraykgw5y" path="res://Nodes/UI/ExitButton.tscn" id="10_ixp46"]
[ext_resource type="Texture2D" uid="uid://blos7ady7opik" path="res://Art/Computer/Icons/truck_icon.png" id="11_7bwlg"]
[ext_resource type="Script" path="res://Scripts/OrderingManager.gd" id="11_drugw"]
[ext_resource type="Script" path="res://Scripts/Data/OrderingData.gd" id="12_b6ndn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tmhhr"]
size = Vector2(3346, 42)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fqni5"]
shader = ExtResource("9_n2fix")
shader_parameter/lod = 2.472

[node name="Main" type="Node2D"]

[node name="MainCamera" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(574, 312)
script = ExtResource("12_b6ndn")

[node name="GameManager" parent="." instance=ExtResource("1_b4pir")]

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(0, 608)

[node name="ColorRect" type="ColorRect" parent="Ground"]
offset_left = -2125.0
offset_right = 1218.0
offset_bottom = 40.0
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="GroundCollider" type="CollisionShape2D" parent="Ground"]
visible = false
position = Vector2(-455, 21)
shape = SubResource("RectangleShape2D_tmhhr")

[node name="Bed" parent="." instance=ExtResource("2_v75gu")]
position = Vector2(972, 587)

[node name="Computer" parent="." instance=ExtResource("7_p7h3x")]
position = Vector2(965, 449)

[node name="Items" type="Node2D" parent="."]

[node name="Cat" parent="." instance=ExtResource("3_q3hs0")]
position = Vector2(463, 513)

[node name="Cat2" parent="." instance=ExtResource("3_q3hs0")]
position = Vector2(633, 513)

[node name="InputManager" parent="." instance=ExtResource("4_t3fam")]

[node name="TruckManager" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="TruckSpawn" type="Marker2D" parent="TruckManager"]
unique_name_in_owner = true
position = Vector2(-1264, 608)

[node name="TruckStop" type="Marker2D" parent="TruckManager"]
unique_name_in_owner = true
position = Vector2(-1, 608)

[node name="ComputerInterface" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1156.0
offset_bottom = 648.0

[node name="Backdrop" type="Control" parent="ComputerInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Sprite2D" parent="ComputerInterface/Backdrop"]
position = Vector2(579, 335)
texture = ExtResource("8_gydw4")

[node name="Blur" type="Sprite2D" parent="ComputerInterface/Backdrop"]
material = SubResource("ShaderMaterial_fqni5")
position = Vector2(579, 335)
texture = ExtResource("8_gydw4")

[node name="GridContainer" type="GridContainer" parent="ComputerInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="Ordering" parent="ComputerInterface/GridContainer" node_paths=PackedStringArray("panel") instance=ExtResource("10_7c3fp")]
clip_contents = false
layout_mode = 2
texture_normal = ExtResource("11_7bwlg")
texture_pressed = ExtResource("11_7bwlg")
texture_hover = ExtResource("11_7bwlg")
texture_disabled = ExtResource("11_7bwlg")
texture_focused = ExtResource("11_7bwlg")
panel = NodePath("../../Panels/OrderingPanel")
label_text = "Order"

[node name="ExitButton" parent="ComputerInterface" node_paths=PackedStringArray("panel") instance=ExtResource("10_ixp46")]
layout_mode = 1
offset_left = -44.0
offset_top = 9.0
offset_right = -14.0
offset_bottom = 40.0
panel = NodePath("..")

[node name="Panels" type="Control" parent="ComputerInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 117.0
offset_top = 69.0
offset_right = -117.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2

[node name="OrderingPanel" type="Control" parent="ComputerInterface/Panels"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_drugw")

[node name="Backdrop" type="Panel" parent="ComputerInterface/Panels/OrderingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Exit" parent="ComputerInterface/Panels/OrderingPanel" node_paths=PackedStringArray("panel") instance=ExtResource("10_ixp46")]
layout_mode = 1
offset_left = -39.0
offset_top = 8.0
offset_right = -9.0
offset_bottom = 39.0
panel = NodePath("..")

[node name="OrderButton" type="Button" parent="ComputerInterface/Panels/OrderingPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -154.0
offset_top = -62.0
offset_right = -15.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 0
text = "Order
"

[node name="ItemsContainer" type="GridContainer" parent="ComputerInterface/Panels/OrderingPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 22.0
offset_top = 20.0
offset_right = 198.0
offset_bottom = -20.0
grow_vertical = 2

[node name="ClearAllButton" type="Button" parent="ComputerInterface/Panels/OrderingPanel"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 208.0
offset_top = 20.0
offset_right = 282.0
offset_bottom = 51.0
text = "Clear all
"

[connection signal="pressed" from="ComputerInterface/Panels/OrderingPanel/OrderButton" to="ComputerInterface/Panels/OrderingPanel" method="_on_order_button_pressed"]
[connection signal="pressed" from="ComputerInterface/Panels/OrderingPanel/ClearAllButton" to="ComputerInterface/Panels/OrderingPanel" method="_on_clear_all_button_pressed"]
